Trasfered working test from older project to make it cleaner and better organized

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Super Galactic Age Calculator</title>
-</head>
-<body>
-  <h1>Super Galactic Age Calculator</h1>
-  <label for="earthAgeInput">Enter your Earth age:</label>
-    <input type="number" id="earthAgeInput">
+  <head>
+    <title>Super Galactic Age Calculator</title>
+  </head>
+  <body>
+    <h1>Super Galactic Age Calculator</h1>
+    <label for="earthAgeInput">Enter your Earth age:</label>
+    <input type="number" id="earthAgeInput" />
     <button onclick="displayAgeOnPlanets()">Calculate</button>
-    <br><br>
+    <br /><br />
     <p>Your age on different planets:</p>
     <ul>
       <li>Mercury: <span id="mercuryAgeOutput"></span></li>
@@ -18,5 +18,5 @@
     </ul>
 
     <script src="age.js"></script>
-</body>
-</html> 
+  </body>
+</html>
